--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [Create]
-pythonqt=D:\平台\淘宝
+pyqt=D:\Application\Create_Template\TempLate\pyqt
+pydm=D:\Application\Create_Template\TempLate\pydm
+
 [Delete2]
 [Delete3]
 [Delete1]
